# lib-win32

./: Cargo.toml
src/: error.rs  lib.rs  string.rs
src/basetsd/: mod.rs  types.rs
src/combaseapi/: mod.rs
src/consoleapi/: mod.rs  types.rs
src/consoleapi2/: mod.rs  types.rs
src/d3d10/: mod.rs
src/d3d11/: mod.rs  types.rs
src/d3d11_1/: mod.rs
src/d3d11_2/: mod.rs
src/d3d11_3/: mod.rs
src/d3d11sdklayers/: mod.rs
src/d3d11shader/: mod.rs
src/d3dcommon/: mod.rs  types.rs
src/d3dcompiler/: mod.rs
src/dbt/: mod.rs
src/dxgi/: mod.rs  types.rs
src/dxgi1_2/: mod.rs
src/dxgi1_3/: mod.rs
src/dxgi1_4/: mod.rs
src/dxgi1_5/: mod.rs
src/dxgi_debug/: mod.rs
src/dxgidebug/: mod.rs  types.rs
src/errhandlingapi/: mod.rs
src/fileapi/: mod.rs
src/guiddef/: mod.rs  types.rs
src/handleapi/: mod.rs
src/heapapi/: mod.rs
src/hidclass/: mod.rs  types.rs
src/intsafe/: mod.rs  types.rs
src/ioapi/: mod.rs
src/ioapiset/: mod.rs
src/ktmw32/: mod.rs
src/libloaderapi/: mod.rs
src/memoryapi/: mod.rs
src/ntddk/: mod.rs
src/ntddmou/: mod.rs
src/ntdef/: mod.rs  types.rs
src/processenv/: mod.rs
src/processthreadsapi/: mod.rs
src/profileapi/: mod.rs
src/raw/: mod.rs
src/securitybaseapi/: mod.rs
src/shellscalingapi/: mod.rs
src/shlwapi/: mod.rs
src/string/: mod.rs  owned.rs  reference.rs
src/strsafe/: mod.rs  types.rs
src/synchapi/: mod.rs  types.rs
src/sysinfoapi/: mod.rs  types.rs
src/timezoneapi/: mod.rs  types.rs
src/unknwn/: mod.rs  types.rs
src/utility/: error.rs  mod.rs  size_t.rs
src/wdm/: mod.rs  (+1 more)
(+1160 files in other folders)
