[package]
name = "win32"
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
description = "Win32 raw bindings"
repository = "https://github.com/shipsimfan/lib-win32"
license = "GPL-3.0-or-later"
publish = false

[features]
d3dcommon = []
d3d10 = ["d3dcommon", "dxgi"]
d3d11 = ["d3dcommon", "dxgi"]
d3dcompiler = ["d3d11"]

dxgi = []
