[package]
name = "win32"
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2024"
description = "Win32 raw bindings"
repository = "https://github.com/shipsimfan/lib-win32"
license = "GPL-3.0-or-later"
publish = false

[features]
d3dcommon = []
d3dcompiler = ["d3dcommon"]

dxgi = []
dxgi1_2 = ["dxgi"]
dxgi1_3 = ["dxgi1_2"]
dxgi1_4 = ["dxgi1_3"]
dxgi1_5 = ["dxgi1_4"]
dxgidebug = ["dxgi"]

d3d10 = ["d3dcommon", "dxgi"]

d3d11 = ["d3dcommon", "dxgi"]
d3d11_1 = ["d3d11"]
d3d11_2 = ["d3d11_1"]
d3d11_3 = ["d3d11_2"]
d3d11sdklayers = ["d3d11"]
d3d11shader = ["d3d11"]
